# NeuralFinance

./: .coverage  .gitignore  API_KEY_SETUP_COMPLETE.md  CONFIG.md  CONTRIBUTING.md  CORRELATION_MATRIX_GUIDE.md  CORRELATION_OPTIMIZATION_COMPLETE.md  DISCLAIMER.md  LICENSE  MANIFEST.in  PACKAGE_RENAME_SUMMARY.md  PRD.md  PRIVACY_POLICY.md  README.md  TERMS_OF_USE.md  TESTING_SUMMARY.md  TROUBLESHOOTING.md  VISUALIZATION_IMPROVEMENTS.md  agent.md  coverage.xml  debug_dates.py  debug_fix.py  debug_scaling.py  demo_correlation_matrix.py  pyproject.toml  pytest.ini  requirements.txt  run_app.sh  run_tests.py  scaling_fix.py  setup.py  setup_api_key.sh  stock_prediction_model.py  summary.md  test_improved_model.py  test_larger_correlation.py  test_larger_correlation_matrix.html  test_nvda_fix.py  test_optimized_correlation.py  test_scaling_fix.py
config/keys/: README.md
examples/: advanced_analysis.py  basic_usage.py  enhanced_usage.py  organize_files.py
examples/demo/: real_demo.py
neural_finance/: __init__.py  __version__.py
neural_finance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
neural_finance/analysis/: __init__.py  real_time_predictor.py  stock_analyzer.py
neural_finance/cli/: __init__.py  main.py
neural_finance/config/: __init__.py  settings.py  setup_api_key.sh
neural_finance/config/keys/: .gitignore  __init__.py  api_keys.example  api_keys.py
neural_finance/core/: exceptions.py
neural_finance/data/: __init__.py
neural_finance/data/fetchers/: sentiment_data.py
neural_finance/data/storage/: __init__.py  cache_manager.py  persistence.py
neural_finance/models/: __init__.py  improved_model.py  lstm_attention.py
neural_finance/utils/: emergency_fixes.py
neural_finance/visualization/: __init__.py  plotters.py
neural_finance/web/: flask_app.py
neural_finance/web/static/css/: style.css
neural_finance/web/static/js/: debug-progress.js  main.js
neural_finance/web/templates/: dashboard.html  index.html
sentiment_cache/: GOOGL_sentiment_20230703_20250702.json  NVDA_sentiment_20210702_20250702.json  NVDA_sentiment_20230703_20250702.json  NVDA_sentiment_20240702_20250702.json  NVDA_sentiment_20250602_20250702.json
stock_prediction_lstm/: __init__.py  __version__.py
stock_prediction_lstm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stock_prediction_lstm/analysis/: __init__.py  portfolio_analyzer.py  stock_analyzer.py
stock_prediction_lstm/cli/: __init__.py  main.py
stock_prediction_lstm/config/: __init__.py  model_config.py  settings.py  setup_api_key.py
stock_prediction_lstm/config/keys/: __init__.py
stock_prediction_lstm/core/: __init__.py  exceptions.py  utils.py
stock_prediction_lstm/data/: __init__.py
stock_prediction_lstm/data/fetchers/: AlternativeSentimentSources.py  __init__.py  sentiment_data.py  stock_data.py
stock_prediction_lstm/data/processors/: __init__.py  technical_indicators.py
stock_prediction_lstm/data/storage/: __init__.py  cache_manager.py  data_manager.py  persistence.py
stock_prediction_lstm/models/: __init__.py  improved_model.py  lstm_attention.py
stock_prediction_lstm/utils/: emergency_fixes.py  model_fixes.py
stock_prediction_lstm/visualization/: __init__.py  plotters.py
stock_prediction_lstm/web/: debug_imports.py  flask_app.py  run_flask.py  run_flask.sh  run_streamlit.py  streamlit_app.py  test_model_consistency.py
stock_prediction_lstm/web/junk/: run_flask.sh  run_flask_debug.py  run_streamlit.py  test_pipeline.py
stock_prediction_lstm/web/sentiment_cache/: NVDA_sentiment_20200702_20250702.json  NVDA_sentiment_20200706_20250703.json  NVDA_sentiment_20230705_20250703.json  NVDA_sentiment_20240702_20250702.json  NVDA_sentiment_20250618_20250702.json  NVDA_sentiment_20250625_20250702.json
stock_prediction_lstm/web/static/css/: style.css
stock_prediction_lstm/web/static/js/: debug-progress.js  main.js
stock_prediction_lstm/web/templates/: compare.html  dashboard.html  error.html  index.html
stock_prediction_lstm/web/templates/partials/: market_status.html
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/test_data/: sample_sentiment_data.json  sample_stock_data.csv
tests/unit/analysis/: test_stock_analyzer.py
tests/unit/data/: __init__.py
tests/unit/data/fetchers/: __init__.py  test_stock_data.py
tests/unit/data/processors/: __init__.py  test_technical_indicators.py
tests/unit/models/: test_improved_model.py
